--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=dropdrop_dev
-DB_USERNAME=dropdrop_dev_user
-DB_PASSWORD=8sT[h@H,(]vA
+DB_DATABASE=creative-drop
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
