--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=dropdrop_dev
-DB_USERNAME=dropdrop_dev_user
-DB_PASSWORD=8sT[h@H,(]vA
+DB_DATABASE=cdweb
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,7 +22,6 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.creativedrop.com
